kubernetes-deploy/inital-deployment/PROD/05-ingress-nginx-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: external-access-prod
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.org/use-proxy-protocol: "true"
spec:
    tls:
      - hosts:
        - wattandenergy.itadvantage.be
        secretName: wattandenergy.itadvantage.be
    rules:
    - host: wattandenergy.itadvantage.be
      http:
        paths:
        - backend:
            serviceName: owncloud-service
            servicePort: 8080
